# ekila_streams

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  audioTask.md  bandit_report.json  bom.xml  conftest.py  dependency-check-gitlab.json  dependency-check-jenkins.html  dependency-check-junit.xml  dependency-check-report.html  dependency-check-report.json  dependency-check-report.sarif  dependency-check-report.xml  docker-compose.yml  entrypoint.sh  gitleaks-report.json  manage.py  prod.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
config_files/: prod-server.ini
ekila_streams/: asgi.py  local_settings_example.py  settings.py  settings_docker.txt  settings_docker_example.py  settings_prod_example.py  urls.py  wsgi.py
ekiladesign/: admin.py  apps.py  consumers.py  factories.py  fixtures.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
ekiladesign/migrations/: 0001_initial.py  0002_alter_publicite_is_updated_at.py  0003_alter_publicite_options.py  0004_alter_publicite_options.py  0005_alter_publicite_options.py  0006_alter_publicite_options.py  0007_alter_publicite_description_and_more.py
ekilauth/: admin.py  apps.py  models.py  urls.py  views.py
ekilauth/authentification/: email.py  jwt.py  permissions.py  serializers.py  (+2 more)
jazzmin/: settings.py  utils.py  widgets.py
radio/: admin.py  constant.py  consumers.py  factories.py  fixtures.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
(+47 files in other folders)
